이미지 추가 및 레이아웃 수정

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -41,6 +41,7 @@ header, footer, main, section, article, nav, aside {
   /* Neutral colors */
   --color-neutral-700: #444444; /* dark gray */
   --color-neutral-500: #999999; /* medium gray */
+  --color-neutral-600: #B8B8B8; /* light gray */
   --color-neutral-300: #DBDBDB;  /* DBDBDB */
   --color-neutral-100: #f2f2f2; /* light gray */
   --color-mint-50: #F8FFF0;     /* F8FFF0 */
