--- a/src/layout/common.scss
+++ b/src/layout/common.scss
@@ -13,14 +13,25 @@
     padding: 25px 0;
     position: relative;
 }
+#nav_wrap:has(#nav_inner:not(:has(.sub_tabs)))::before {
+    width: 96px;
+    height: 136px;
+}
+#nav_wrap:has(#nav_inner:not(:has(.sub_tabs))):after {
+    width: 104px;
+    height: 112px;
+}
 /* When no tabs are present under the visual, use compact vertical padding */
 #nav_inner:not(:has(.sub_tabs)) {
-    padding: 45px 0;
+    padding: 30px 0;
 }
+/* compact nav: shrink decorations (placed at end to override previous and media rules) */
+
 #content_wrap {
     max-width: 1400px;
     margin: 0 auto;
     padding-top: 40px;
+    padding-bottom: 40px;
 }
 /* Inner tabs (tabs-inside-content) */
 #content_wrap .inner_tabs {
@@ -78,6 +89,9 @@
 #cont_inner {
    position: relative;
    width: 100%;
+   display: flex;
+   flex-direction: column;
+   gap: 30px;
 }
 #cont_inner .inner_tabs {
     width: 100%;
@@ -241,6 +255,9 @@
     #cont_inner .inner_tabs ul {
         padding: 0 30px;
     }
+    #cont_inner {
+        padding: 0 30px;
+    }
 }
 @media (max-width: 1200px) {
     #nav_inner .visual_decoration.right {
@@ -308,3 +325,4 @@
         grid-template-columns: repeat(auto-fit, minmax(80px, 1fr));
     }
 }
+
