--- a/src/layout/search.scss
+++ b/src/layout/search.scss
@@ -59,24 +59,18 @@
 }
 .SearchPage .sr-summary {
 	text-align: center;
+	gap: 15px;
     display: flex;
     flex-direction: column;
 }
 .SearchPage .sr-summary .point { color: var(--sr-blue); }
 .SearchPage .sr-tabs {
-	margin-top: 10px;
-	display: -webkit-box;
-	display: -ms-flexbox;
-	display: flex;
-	-webkit-box-pack: center;
-	    -ms-flex-pack: center;
-	        justify-content: center;
+	display: grid;
+	grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
 	gap: 10px;
-	flex-wrap: wrap;
 }
 .SearchPage .sr-tabs li {
     flex: 0 0 auto;
-    min-width: 250px;
 }
 .SearchPage .sr-tabs a {
 	display: inline-block;
@@ -102,7 +96,6 @@
     height: 2px;
     background: var(--color-brand-blue);
     border-radius: 2px;
-    /* 아래 선이 버튼 글씨 너비만큼 나오도록 */
     max-width: 90%;
     margin: 0 auto;
     right: 0;
@@ -281,17 +274,7 @@
     flex-direction: column;
 }
 .SearchPage .sr-summary .point { color: var(--sr-blue); }
-.SearchPage .sr-tabs {
-	margin-top: 10px;
-	display: -webkit-box;
-	display: -ms-flexbox;
-	display: flex;
-	-webkit-box-pack: center;
-	    -ms-flex-pack: center;
-	        justify-content: center;
-	gap: 10px;
-	flex-wrap: wrap;
-}
+
 .SearchPage .sr-tabs li {
     flex: 0 0 auto;
     min-width: 250px;
@@ -357,7 +340,6 @@
     position: relative;
     padding: 25px 0;
 	font-size: var(--fs-16);
-    border-top: 1px solid var(--color-neutral-600);
 }
 .SearchPage .sr-list > li a {
     display: flex;
