--- a/src/layout/common.scss
+++ b/src/layout/common.scss
@@ -263,7 +263,7 @@
     z-index: 5;
     left: 70px;
     bottom: -57px;
-    background-image: url('/images/image_sub_person.svg');
+    background-image: url('/images/image_sub_person.png');
     background-repeat: no-repeat;
     background-size: contain;
 }
@@ -275,7 +275,7 @@
     z-index: 5;
     right: 70px;
     bottom: 0;
-    background-image: url('/images/image_windmill.svg');
+    background-image: url('/images/image_windmill.png');
     background-repeat: no-repeat;
     background-size: contain;
 }   
